--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -772,6 +772,10 @@ a,a:visited,a:active,a:hover{
         font-size:1.8rem;
         line-height:2.2rem;
 
+        img{
+            max-width:100%;
+        }
+
         h1, h2, h3,
         h4, h5, h6 {
             -webkit-font-feature-settings: 'dlig' 1, 'liga' 1, 'lnum' 1, 'kern' 1;
